deployments/kubernetes/31_deployment_frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
    stack: remoter
spec:
  selector:
    matchLabels:
      app: frontend
      stack: remoter
  template:
    metadata:
      labels:
        app: frontend
        stack: remoter
    spec:
      containers:
        - imagePullPolicy: Always
          name: container-0
          image: suterdev/remoter.frontend:0.2.2
          ports:
          - name: http
            protocol: TCP
            containerPort: 80
      restartPolicy: Always
  replicas: 1
