deployments/kubernetes/33_deployment_postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    app: postgres
    stack: remoter
spec:
  selector:
    matchLabels:
      app: postgres
      stack: remoter
  template:
    metadata:
      labels:
        app: postgres
        stack: remoter
    spec:
      volumes:
      - name: pvc-postgres
        persistentVolumeClaim:
          claimName: pvc-postgres
      - name: sqlCommand
        configMap:
          name: remoter-initial-db
      containers:
        - imagePullPolicy: Always
          name: postgres
          image: postgres:15.2
          ports:
          - name: db
            protocol: TCP
            containerPort: 5432
          volumeMounts:
          - mountPath: /data
            name: pvc-postgres
      restartPolicy: Always
  replicas: 1
