deployments/kubernetes/51_service_frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
    stack: remoter
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  sessionAffinity: None
  type: ClusterIP
