deployments/kubernetes/54_service_guacd.yml
apiVersion: v1
kind: Service
metadata:
  name: guacd-service
spec:
  selector:
    app: guacd
    stack: remoter
  ports:
    - name: guacd
      port: 4822
      protocol: TCP
      targetPort: guacd
  sessionAffinity: None
  type: ClusterIP
