deployments/kubernetes/55_service_guacamole.yml
apiVersion: v1
kind: Service
metadata:
  name: guacamole-service
spec:
  selector:
    app: guacamole
    stack: remoter
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  sessionAffinity: None
  type: ClusterIP
