deployments/kubernetes/80_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: remoter-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: remoter.example.com
      http:
        paths:
          - backend:
              service:
                name: backend-service
                port:
                  number: 80
            path: /api
            pathType: Prefix
          - backend:
              service:
                name: guacamole-service
                port:
                  number: 80
            path: /guacamole
            pathType: Prefix
          - backend:
              service:
                name: frontend-service
                port:
                  number: 80
            path: /
            pathType: Prefix
